# rlvr-prompt-rewriting

./: =2.1.0  README.md  pyproject.toml
data/: rude_sentences.json
scripts/: prepare_dataset.py  run_training.py  test.py  train_gemma_rlvr.py
src/prompt_rewriting/: __init__.py  actions.py  cli.py  environment.py  policy.py  reward.py  rlvr_utils.py  training.py
src/prompt_rewriting.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_actions.py  test_reward.py  test_rlvr_utils.py  test_training.py
wandb/: latest-run
wandb/run-20251129_043730-w15tp43w/: run-w15tp43w.wandb
wandb/run-20251129_043730-w15tp43w/files/: config.yaml  requirements.txt  wandb-metadata.json  wandb-summary.json
wandb/run-20251129_044240-u2prqj9j/files/: wandb-metadata.json
